{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 1000,
  "lineage": "b8298bb0-8c37-f7ce-43ea-a7258638d6fc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:793939823874:route-table/rtb-0c12570570dc82a09",
            "default_route_table_id": "rtb-0c12570570dc82a09",
            "id": "rtb-0c12570570dc82a09",
            "owner_id": "793939823874",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06771c175775a6c06",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public"
            },
            "tags_all": {
              "Name": "Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-07cf4c0e4fc9ec2d3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "module.bruno_campos_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03bbce26042c68f4c",
            "association_id": "eipassoc-06876fb24110b316d",
            "domain": "vpc",
            "id": "eipalloc-03bbce26042c68f4c",
            "network_border_group": "sa-east-1",
            "network_interface": "eni-097eec6cc684823d7",
            "private_dns": "ip-10-30-0-72.sa-east-1.compute.internal",
            "private_ip": "10.30.0.72",
            "public_dns": "ec2-54-207-196-96.sa-east-1.compute.amazonaws.com",
            "public_ip": "54.207.196.96",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Elastic"
            },
            "tags_all": {
              "Name": "Elastic"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "module.bruno_campos_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08ae71fd7f1449df1",
            "arn": "arn:aws:ec2:sa-east-1:793939823874:instance/i-0b9af6d674a8a8c2e",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b9af6d674a8a8c2e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "wordpress-boilerplate",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-0081cd47de7d58b05",
            "private_dns": "ip-10-30-0-235.sa-east-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.30.0.235",
            "public_ip": "18.230.56.81",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09875702b9c70734f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a424202e6fc90525",
            "tags": {
              "Name": "web-server"
            },
            "tags_all": {
              "Name": "web-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a3c767f5d419cf7a"
            ]
          },
          "dependencies": [
            "aws_security_group.web_server",
            "aws_subnet.public_az_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:793939823874:internet-gateway/igw-06771c175775a6c06",
            "id": "igw-06771c175775a6c06",
            "owner_id": "793939823874",
            "tags": {
              "Name": "Internet-Gateway"
            },
            "tags_all": {
              "Name": "Internet-Gateway"
            },
            "vpc_id": "vpc-07cf4c0e4fc9ec2d3"
          },
          "dependencies": [
            "module.bruno_campos_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03bbce26042c68f4c",
            "connectivity_type": "public",
            "id": "nat-08f04b4ed6515cedc",
            "network_interface_id": "eni-097eec6cc684823d7",
            "private_ip": "10.30.0.72",
            "public_ip": "54.207.196.96",
            "subnet_id": "subnet-0a424202e6fc90525",
            "tags": {
              "Name": "Gateway-NAT"
            },
            "tags_all": {
              "Name": "Gateway-NAT"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.this",
            "aws_subnet.public_az_a",
            "module.bruno_campos_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:793939823874:route-table/rtb-0d1b23136d58c9ad2",
            "id": "rtb-0d1b23136d58c9ad2",
            "owner_id": "793939823874",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08f04b4ed6515cedc",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private"
            },
            "tags_all": {
              "Name": "Private"
            },
            "timeouts": null,
            "vpc_id": "vpc-07cf4c0e4fc9ec2d3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_subnet.public_az_a",
            "module.bruno_campos_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_az_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1891add60819e6a",
            "route_table_id": "rtb-0d1b23136d58c9ad2",
            "subnet_id": "subnet-03317744158286a4b"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_route_table.private",
            "aws_subnet.private_az_a",
            "aws_subnet.public_az_a",
            "module.bruno_campos_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_az_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e28064b2f291178b",
            "route_table_id": "rtb-0d1b23136d58c9ad2",
            "subnet_id": "subnet-0d4eff2ae3a7c6a45"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_route_table.private",
            "aws_subnet.private_az_b",
            "aws_subnet.public_az_a",
            "module.bruno_campos_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_az_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3a6e447958fb3e8",
            "route_table_id": "rtb-0c12570570dc82a09",
            "subnet_id": "subnet-0a424202e6fc90525"
          },
          "dependencies": [
            "aws_default_route_table.public",
            "aws_internet_gateway.this",
            "aws_subnet.public_az_a",
            "module.bruno_campos_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_az_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-008d3e294d0ecee98",
            "route_table_id": "rtb-0c12570570dc82a09",
            "subnet_id": "subnet-08940678c758c242e"
          },
          "dependencies": [
            "aws_default_route_table.public",
            "aws_internet_gateway.this",
            "aws_subnet.public_az_b",
            "module.bruno_campos_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:793939823874:security-group/sg-0810ff31a292ec28b",
            "description": "Msysql",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0810ff31a292ec28b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MYSQL/Aurora",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a3c767f5d419cf7a"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Msysql",
            "name_prefix": "",
            "owner_id": "793939823874",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDS Security Group"
            },
            "tags_all": {
              "Name": "RDS Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-07cf4c0e4fc9ec2d3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web_server",
            "module.bruno_campos_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:793939823874:security-group/sg-0a3c767f5d419cf7a",
            "description": "Inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a3c767f5d419cf7a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "177.18.133.112/32"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Inbound traffic",
            "name_prefix": "",
            "owner_id": "793939823874",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Ec2 Instace Security Group"
            },
            "tags_all": {
              "Name": "Ec2 Instace Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-07cf4c0e4fc9ec2d3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bruno_campos_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_az_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:793939823874:subnet/subnet-0a6b925c8340552d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.30.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6b925c8340552d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "793939823874",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Db-AZ-A"
            },
            "tags_all": {
              "Name": "Db-AZ-A"
            },
            "vpc_id": "vpc-07cf4c0e4fc9ec2d3"
          },
          "dependencies": [
            "module.bruno_campos_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_az_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:793939823874:subnet/subnet-0ff5cc3f4eec7e690",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "cidr_block": "10.30.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff5cc3f4eec7e690",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "793939823874",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Db-AZ-B"
            },
            "tags_all": {
              "Name": "Db-AZ-B"
            },
            "vpc_id": "vpc-07cf4c0e4fc9ec2d3"
          },
          "dependencies": [
            "module.bruno_campos_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_az_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:793939823874:subnet/subnet-03317744158286a4b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.30.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03317744158286a4b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "793939823874",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Priv-AZ-A"
            },
            "tags_all": {
              "Name": "Priv-AZ-A"
            },
            "vpc_id": "vpc-07cf4c0e4fc9ec2d3"
          },
          "dependencies": [
            "module.bruno_campos_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_az_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:793939823874:subnet/subnet-0d4eff2ae3a7c6a45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "cidr_block": "10.30.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d4eff2ae3a7c6a45",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "793939823874",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Priv-AZ-B"
            },
            "tags_all": {
              "Name": "Priv-AZ-B"
            },
            "vpc_id": "vpc-07cf4c0e4fc9ec2d3"
          },
          "dependencies": [
            "module.bruno_campos_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_az_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:793939823874:subnet/subnet-0a424202e6fc90525",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.30.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a424202e6fc90525",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "793939823874",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Pub-AZ-A"
            },
            "tags_all": {
              "Name": "Pub-AZ-A"
            },
            "vpc_id": "vpc-07cf4c0e4fc9ec2d3"
          },
          "dependencies": [
            "module.bruno_campos_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_az_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:793939823874:subnet/subnet-08940678c758c242e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "cidr_block": "10.30.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08940678c758c242e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "793939823874",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Pub-AZ-B"
            },
            "tags_all": {
              "Name": "Pub-AZ-B"
            },
            "vpc_id": "vpc-07cf4c0e4fc9ec2d3"
          },
          "dependencies": [
            "module.bruno_campos_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.bruno_campos_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:793939823874:vpc/vpc-07cf4c0e4fc9ec2d3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.30.0.0/16",
            "default_network_acl_id": "acl-078a1be8ef27196c0",
            "default_route_table_id": "rtb-0c12570570dc82a09",
            "default_security_group_id": "sg-0fac791dffc319a1b",
            "dhcp_options_id": "dopt-0817801b946973a27",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-07cf4c0e4fc9ec2d3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c12570570dc82a09",
            "owner_id": "793939823874",
            "tags": {
              "Environment": "dev",
              "Name": "Bruno-VPC",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Bruno-VPC",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}